fix decode, fix briefing overlay

--- a/MaiInHerLoop/Resources/Scenarios/south_easy_1.json
+++ b/MaiInHerLoop/Resources/Scenarios/south_easy_1.json
@@ -1,7 +1,7 @@
 {
   "id": "south_fire_1",
   "region": "south",
-  "danger": "fire",
+  "danger": "2",
   "title_en": "The 18th Floor",
   "title_vi": "Tầng 18",
   "intro_en": "In Vietnam, some tube houses or high-rise apartments are built for living, not for escaping.\n\nThe 2023 Khương Hạ apartment fire in Hanoi killed 56 people in one building. The 2024 Trung Kính fire killed 14. These happen multiple times per year and the death toll per incident is high specifically because of architectural trapping.\n\n[Name] rents on the 18th floor. On a regular Tuesday night, [Name]'s mind drifts to the idea of starting your life from scratch, and chasing million-dollar investments in Vietnam.",
