--- a/MaiInHerLoop/Resources/Scenarios/south_easy_1.json
+++ b/MaiInHerLoop/Resources/Scenarios/south_easy_1.json
@@ -4,8 +4,8 @@
   "danger": "2",
   "title_en": "The 18th Floor",
   "title_vi": "Tầng 18",
-  "intro_en": "In Vietnam, some tube houses or high-rise apartments are built for living, not for escaping.\n\nThe 2023 Khương Hạ apartment fire in Hanoi killed 56 people in one building. The 2024 Trung Kính fire killed 14. These happen multiple times per year and the death toll per incident is high specifically because of architectural trapping.\n\n[Name] rents on the 18th floor. On a regular Tuesday night, [Name]'s mind drifts to the idea of starting your life from scratch, and chasing million-dollar investments in Vietnam.",
-  "intro_vi": "Ở Việt Nam, một số nhà ống hay chung cư cao tầng được xây để ở, không phải để thoát hiểm.\n\nVụ cháy chung cư Khương Hạ năm 2023 tại Hà Nội khiến 56 người thiệt mạng trong một tòa nhà. Vụ cháy Trung Kính năm 2024 cướp đi 14 sinh mạng. Những vụ như thế này xảy ra nhiều lần mỗi năm, và số người chết cao vì kiến trúc bẫy người.\n\n[Name] thuê căn hộ tầng 18. Vào một tối thứ Ba bình thường, [Name] đang mơ về việc làm lại từ đầu và theo đuổi những khoản đầu tư triệu đô ở Việt Nam.",
+  "intro_en": "[Name] rents on the 18th floor. On a regular Tuesday night, [Name]'s mind drifts to the idea of starting your life from scratch, and chasing million-dollar investments in Vietnam.",
+  "intro_vi": "[Name] thuê căn hộ tầng 18. Vào một tối thứ Ba bình thường, [Name] đang mơ về việc làm lại từ đầu và theo đuổi những khoản đầu tư triệu đô ở Việt Nam.",
   "start_question": "q1",
   "questions": [
     {
@@ -332,5 +332,7 @@
         }
       ]
     }
-  ]
+  ],
+  "insight_en": "In Vietnam, some tube houses or high-rise apartments are built for living, not for escaping.\n\nThe 2023 Khương Hạ apartment fire in Hanoi killed 56 people in one building. The 2024 Trung Kính fire killed 14. These happen multiple times per year and the death toll per incident is high specifically because of architectural trapping.",
+  "insight_vi": "Ở Việt Nam, một số nhà ống hay chung cư cao tầng được xây để ở, không phải để thoát hiểm.\n\nVụ cháy chung cư Khương Hạ năm 2023 tại Hà Nội khiến 56 người thiệt mạng trong một tòa nhà. Vụ cháy Trung Kính năm 2024 cướp đi 14 sinh mạng. Những vụ như thế này xảy ra nhiều lần mỗi năm, và số người chết cao vì kiến trúc bẫy người."
 }
